migracio three.js con CDN a un entorno configurado con vite

--- a/index.html
+++ b/index.html
@@ -4,19 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>3D Planet</title>
+    <!-- Enlace al archivo CSS externo -->
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <style>
-        body {
-            margin: 0;
-            overflow: hidden; /* Evita el desplazamiento de la barra de desplazamiento */
-        }
-        canvas {
-            display: block; /* Elimina el espacio debajo del canvas */
-        }
-    </style>
-    
+    <!-- Cargar Three.js para renderizar el planeta 3D -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+    <!-- Enlace al archivo de JavaScript personalizado -->
     <script src="script.js"></script>
 </body>
 </html>
