cambios para poder configurar vite y ajustes de three.js imagenes no figuran

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     <link rel="stylesheet" href="/src/styles.css">
 </head>
 <body>
+    <!-- Cargar Three.js para renderizar el planeta 3D -->
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script> -->
     <!-- Enlace al archivo de JavaScript personalizado -->
     <script type="module" src="/src/main.js"></script> <!-- Enlaza al archivo JS con Three.js -->
+
 </body>
 </html>
